# terrible-ideas

./: README.md  badideas.py  pyproject.toml  terrible_ideas.py
