[tool.poetry]
name = "terrible-ideas"
version = "0.6.0"
description = "Frequently asked-for missing anti-features"
authors = ["L3viathan <git@l3vi.de>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
fishhook = "^0.1.4"
spelcheck = "^0.3.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
